--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -38,114 +38,110 @@
                     <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Watches</a>
                     </li>
-                    <!--Login-->
-                    <li class="nav-item">
-                        <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#LoginModal">
-                                Login
-                            </button>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="LoginModalLabel"
-                                aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header text-dark bg1">
-                                            <h5 class="modal-title" id="LoginModalLabel">Login</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body text-dark bg1">
-                                            <!--Form-->
-                                            <form>
-                                                <div class="mb-3">
-                                                    <label for="exampleInputEmail1" class="form-label">Email
-                                                        address</label>
-                                                    <input type="email" class="form-control" id="exampleInputEmail1"
-                                                        aria-describedby="emailHelp">
-                                                    <div id="emailHelp" class="form-text">We'll never share your email
-                                                        with anyone else.</div>
-                                                </div>
-                                                <div class="mb-3">
-                                                    <label for="exampleInputPassword1"
-                                                        class="form-label">Password</label>
-                                                    <input type="password" class="form-control"
-                                                        id="exampleInputPassword1">
-                                                </div>
-                                                <div class="mb-3 form-check">
-                                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                                    <label class="form-check-label" for="exampleCheck1">Check me
-                                                        out</label>
-                                                </div>
-                                                <button type="submit" class="btn btn-primary"
-                                                    data-bs-dismiss="modal">Submit</button>
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer text-dark bg1">
-                                            <button type="button" class="btn btn-secondary"
-                                                data-bs-dismiss="modal">Close</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-
-                    <!--Sign Up-->
-                    <li class="nav-item">
-                        <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#SignupModal">
-                                Sign Up
-                            </button>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="SignupModal" tabindex="-1" aria-labelledby="SignupModalLabel"
-                                aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header text-light bg1">
-                                            <h5 class="modal-title" id="SignupModalLabel">Sign Up</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body text-light bg1">
-                                            <form>
-                                                <div class="mb-3">
-                                                    <label for="exampleInputEmail1" class="form-label">Email
-                                                        address</label>
-                                                    <input type="email" class="form-control" id="exampleInputEmail2"
-                                                        aria-describedby="emailHelp">
-                                                    <div id="emailHelp2" class="form-text">We'll never share your email
-                                                        with anyone else.</div>
-                                                </div>
-                                                <div class="mb-3">
-                                                    <label for="exampleInputPassword1"
-                                                        class="form-label">Password</label>
-                                                    <input type="password" class="form-control"
-                                                        id="exampleInputPassword2">
-                                                </div>
-                                                <div class="mb-3">
-                                                    <label for="exampleInputPassword1" class="form-label">Confirm
-                                                        Password</label>
-                                                    <input type="password" class="form-control"
-                                                        id="exampleInputPassword3">
-                                                </div>
-                                                <button type="submit" class="btn btn-primary"
-                                                    data-bs-dismiss="modal">Submit</button>
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer text-light bg1">
-                                            <button type="button" class="btn btn-secondary"
-                                                data-bs-dismiss="modal">Close</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
                 </ul>
+                <!--Login-->
+                <!-- <li class="nav-item"> -->
+                <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#LoginModal">
+                        Login
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="LoginModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header text-dark bg1">
+                                    <h5 class="modal-title" id="LoginModalLabel">Login</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body text-dark bg1">
+                                    <!--Form-->
+                                    <form>
+                                        <div class="mb-3">
+                                            <label for="exampleInputEmail1" class="form-label">Email
+                                                address</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                                aria-describedby="emailHelp">
+                                            <div id="emailHelp" class="form-text">We'll never share your email
+                                                with anyone else.</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                                            <input type="password" class="form-control" id="exampleInputPassword1">
+                                        </div>
+                                        <div class="mb-3 form-check">
+                                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                            <label class="form-check-label" for="exampleCheck1">Check me
+                                                out</label>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary"
+                                            data-bs-dismiss="modal">Submit</button>
+                                    </form>
+                                </div>
+                                <div class="modal-footer text-dark bg1">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- </li> -->
+
+                <!--Sign Up-->
+                <!-- <li class="nav-item"> -->
+                    <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#SignupModal">
+                            Sign Up
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="SignupModal" tabindex="-1" aria-labelledby="SignupModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header text-light bg1">
+                                        <h5 class="modal-title" id="SignupModalLabel">Sign Up</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body text-light bg1">
+                                        <form>
+                                            <div class="mb-3">
+                                                <label for="exampleInputEmail1" class="form-label">Email
+                                                    address</label>
+                                                <input type="email" class="form-control" id="exampleInputEmail2"
+                                                    aria-describedby="emailHelp">
+                                                <div id="emailHelp2" class="form-text">We'll never share your email
+                                                    with anyone else.</div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                                <input type="password" class="form-control" id="exampleInputPassword2">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Confirm
+                                                    Password</label>
+                                                <input type="password" class="form-control" id="exampleInputPassword3">
+                                            </div>
+                                            <button type="submit" class="btn btn-primary"
+                                                data-bs-dismiss="modal">Submit</button>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer text-light bg1">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <!-- </li> -->
+
             </div>
             <i class="fa fa-duotone fa-cart-plus" style="font-size:3rem;"></i>
 
